--- a/cv-website/src/styles.css
+++ b/cv-website/src/styles.css
@@ -1,1 +1,97 @@
-/* You can add global styles to this file, and also import other style files */
+
+.collapsible {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 1em;
+    text-align: center;
+  }
+  
+  .collapsible-header {
+    padding: 0.5em;
+    cursor: pointer;
+    user-select: none;
+    font-family: 'Funnel', Monospace;
+    text-align: center;
+  }
+  
+  .collapsible-container {
+    width: 100%;
+    border: 2px solid #ddd; /* Adds a border */
+    border-radius: 8px; /* Optional rounded corners */
+    transition: width 0.3s ease, border-color 0.3s ease; /* Smooth transition for width and border */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional shadow for better appearance */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; /* Allow items to wrap to the next row */
+    gap: 10px; /* Add spacing between items */
+    justify-content: space-evenly; /* Space items evenly */
+  }
+  .projects-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    width: 100%;
+    gap: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+  
+  /* Collapsed container */
+  .collapsible-container.collapsed-container {
+    width: 100%; /* Reduce width when collapsed */
+    margin: 0;
+  }
+  
+  
+  /* Collapsed header */
+  .collapsible-header.collapsed-header {
+    width: 95%; /* Match container width when collapsed */
+  }
+  
+
+  
+  /* Collapsible content */
+  .collapsible-content {
+    max-height: 100%;
+    overflow: auto;
+  transition: max-height 0.3s ease;
+  }
+  
+  .collapsible-content.collapsed {
+  max-height: 0;
+  padding: 0 !important;
+  transition: max-height 0.3s ease;
+  overflow: hidden;
+  }
+
+  
+
+  .collapsibles-container {
+    display: flex;
+    flex-direction: row; /* Default: items in a row */
+    width: 100%;
+    gap: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+
+
+  @media (max-width: 768px) {
+    html {
+      font-size: 90%;
+  
+      /* Slightly smaller on smaller screens */
+      .collapsibles-container {
+        flex-direction: column;
+        align-items: center;
+        /* Stack items in a column on smaller screens */
+      }
+  
+      .collapsible-item {
+        flex: 1 1 calc(100% - 20px); /* Stack items in a column */
+        max-width: calc(100% - 20px);
+      }
+    }
+  }
